<resources>
    <string name="app_name">SmartFridge</string>
    <!-- Login strings -->
    <string name="login_btnLogin">Continue with Google</string>
    <string name="login_btnExit">Exit</string>

    <!-- Home strings -->
    <string name="home_title">Home</string>
    <string name="home_searchHint">Search for recipes...</string>

    <!-- Fridge strings -->
    <string name="fridge_title">Fridge</string>
    <string name="fridge_searchHint">Search for ingredients...</string>

    <!-- Settings strings -->
    <string name="settings_title">Settings</string>
    <string name="settings_styleTitle">Style</string>
    <string name="settings_styleOption1">Light Theme</string>
    <string name="settings_styleOption2">Dark Theme</string>
    <string name="settings_btnLogout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Ingrediente strings -->
    <string name="ingrediente_title">Add Ingredient</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="unit">Unit</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="ingrediente_btnsave">Save</string>
    <string name="ingrediente_btnContinue">Continue</string>
</resources>